# criptoapp

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yaml
back/cripto-app/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
back/cripto-app/cripto_app/: alembic.ini  main.py  settings.py
back/cripto-app/cripto_app/alembic/: env.py  script.py.mako
back/cripto-app/cripto_app/alembic/versions/: 07d2e620255e_revision_migration.py  2c23820297af_new_field.py  2db1ae5811cb_init.py  3a9dc419de2c_revision_migration.py  4e5be4bf77b4_migration_2.py  6bbe67ee23ec_init.py  76c158afc74e_test_relation.py  9891385e21ec_revision_migration.py  99603dda8427_migration_1.py  b11cfa6230c7_migration_name.py  b21fe97e3004_remove_field.py
back/cripto-app/cripto_app/db/: crud.py  crud_test.py  database.py  models.py
back/cripto-app/cripto_app/db/auth/: schemas.py  users.py
back/cripto-app/cripto_app/db/schemas/: admin_s.py  card_s.py  demo_order_s.py  level_s.py  notification_s.py  order_s.py  post_s.py  product_s.py  referal_s.py  user_s.py  wallet_s.py
back/cripto-app/cripto_app/payments/: stripe.py
back/cripto-app/cripto_app/payments/schemas/: nowpayment_s.py  (+2 more)
back/cripto-app/cripto_app/routes/: admin_routes.py  card_routes.py  demo_order_routes.py  level_routes.py  notification_routes.py  post_routes.py  product_routes.py  referal_routes.py  user_routes.py  users_routes.py  wallet_routes.py
back/cripto-app/cripto_app/tasks/: notifications.py  posts.py
back/cripto-app/cripto_app/ws/: ws.py
back/cripto-app/docker/: cripto_app.sh
(+91 files in other folders)
